# t-graank

./: .gitignore  .travis.yml  AUTHORS.rst  LICENSE  PyCharm:GradualPatterns.py  PyCharm:karura2012_2017.json  README.md  ndvi.py  pyproject.toml  requirements.txt  setup.py
PyCharm/: Coordinates.py  DataTransform.py  GradualPatterns.py  ModifiedGRAANK.py  NDVI.py  README.md  RestructureNDVI.py  TimeLag.py  UserMain.py  coordinates.py  graank.py  kenya_coordinates.csv  mod_algorithm.py  ndvi.py  ndvi_file.csv  settings.py  test.csv  test.py
analysis/: aqy1k_timestamp_data.csv  aqy1k_transformed_data.csv  aqy25_timestamp_data.csv  aqy25_transformed_data.csv  ftgp_composition.ipynb  plot_sax.ipynb  res_tgpAQY1k.txt  res_tgpAQY25.txt  t_graank.ipynb  tgraank_performance.ipynb  timeseries_analysis.ipynb  timeseries_analysis_del.ipynb  timeseries_decomposition.ipynb
data/: ndvi_file.csv  ndvi_test.csv  towns_jupyter.csv
datasets/: DATASET.csv  air_quality1k.csv  air_quality25.csv  hungary_chickenpox.csv  ke_evi_data.csv  ke_evi_data_2k.csv  ke_rain_data.csv  ke_rain_data_2k.csv  kenya_jupyter.csv  kenya_major_towns.csv  ndvi_test.csv  ndvi_towns.csv  ndvi_towns_full.csv  rain_nrb.csv  rain_temp1991-2015.csv  rain_temp2013-2015.csv  rain_temp2013-2015_full.csv
misc/: get_cell_coordinates.py
python/: Main.py  README.md  UserMain.py  main.py
results/: demo.ipynb  rain_temp2013-2015.h5  rain_temp2013-2015_timestamp_data.csv  rain_temp2013-2015_transformed_data.csv  res_temp15912733169129128.txt  res_temp1591273320888472.txt  res_temp1592327769203202.txt  res_tgp17201270324732041.txt  res_tgp17212063819595897.txt  res_tgp17216436640161111.txt  res_tgp17294914572759962.txt  res_tgp1730454648213471.txt  res_tgp17304547823625968.txt  res_tgp17304550520821342.txt  res_tgp17304551487101076.txt  res_tgp17304554764787762.txt  res_tgp17304554921542184.txt  ts0res_tgp17223219170937564.txt
src/: __main__.py  __test__.py  init_tgraank.py  init_tgraank_h5.py  (+2 more)
(+123 files in other folders)
